--- a/unit4/index.html
+++ b/unit4/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-	<title>2Ride</title>
+	<title>ryanWILKINS</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
