--- a/unit4/index.html
+++ b/unit4/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header>
-		<h1>2RIDE</h1>
+		<h1>ryanWILKINS</h1>
 		<p id="slogan">Pursuit of the ultimate cycling machine</p>
 	</header>
 		<p id="hero-image"></p>
