--- a/unit4/index.html
+++ b/unit4/index.html
@@ -11,8 +11,9 @@
 
 <body>
 	<header>
-		<h1>ryanWILKINS</h1>
-		<p id="slogan">Pursuit of the ultimate cycling machine</p>
+		<h1 id="name">r<strong>WILKINS</strong></h1>
+		
+		<p id="slogan">pursuit of the ultimate cycling machine</p>
 	</header>
 		<p id="hero-image"></p>
 	<!--<img src="images\hero-image.jpg" alt="View of bicycle on gravel road">-->
@@ -21,7 +22,7 @@
 
 	<section>
 
-		<p>I wanted one bike that does it all - gravel, road, fast, comfortable - that takes into account the best of bicycle engineering and technology, with a view to where things are heading, that won't be obsolete, that will ride in rain or sunshine and put a big smile across my face. This is the journey.</p>
+		<p>I wanted one bike that does it all; gravel, road, fast, comfortable. That takes the best of bicycle engineering and technology, with a view to where things are heading. That won't be obsolete. That will ride in rain or sunshine and put a big smile across my face. This is the journey.</p>
 		<ul>
 			<li>Start with requirements</li>
 			<li>Fit for a Frame</li>
