--- a/unit4/index.html
+++ b/unit4/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<h1 id="name">r<strong>WILKINS</strong></h1>
 		
-		<p id="slogan">pursuit of the ultimate cycling machine</p>
+		<p id="slogan">(pursuit of the ultimate cycling machine)</p>
 	</header>
 		<p id="hero-image"></p>
 	<!--<img src="images\hero-image.jpg" alt="View of bicycle on gravel road">-->
@@ -21,7 +21,7 @@
 	<hr>
 
 	<section>
-
+		<h2>How this came about</h2>
 		<p>I wanted one bike that does it all; gravel, road, fast, comfortable. That takes the best of bicycle engineering and technology, with a view to where things are heading. That won't be obsolete. That will ride in rain or sunshine and put a big smile across my face. This is the journey.</p>
 		<ul>
 			<li>Start with requirements</li>
@@ -34,10 +34,8 @@
 	<hr>
 	
 	<footer>
-		<p>Contact me: <a href="mailto:ryan_wilkins@hotmail.com">Ryan Wilkins</a>
+		<p>Contact me: <a href="mailto:ryan_wilkins@hotmail.com">Ryan Wilkins</a></p>
 	</footer>
-	
-	</p>
 </body>
 
 
