update other PNG

--- a/unit5/index.html
+++ b/unit5/index.html
@@ -69,7 +69,7 @@
 					<li>How do you know the body position is <span>right</span>. Use the no hands test!</li>
 					<li>Analysis to the nth degree (graphs of pedalling, photo etc)</li>
 				</ul>
-				<img class="responsive_image" src="images\bike-geo.png" alt="Bike geometry">
+				<img class="responsive_image" src="images\bike-geo.PNG" alt="Bike geometry">
 				<p class="photo-copyright">Photo Copyright: Baum</p>
 			
 			</article>
@@ -84,7 +84,7 @@
 					<li>Enve 4.5 SES AR rims with Sapian CX Ray spokes and DT Swiss 240S Centerlock hubs. Custom Syntace thru axle. Tubeless tyres. <span>Butter</span> on wheels</li>
 					<li>Custom King Ti bottle cages</li>
 				</ul>
-				<img class="responsive_image" src="images\bike.png" alt="Baum Orbis bicycle">
+				<img class="responsive_image" src="images\bike.PNG" alt="Baum Orbis bicycle">
 				<p class="photo-copyright">Photo Source/Copyright: Baum</p>
 			
 			</article>
