--- a/unit8/index.html
+++ b/unit8/index.html
@@ -7,6 +7,8 @@
 	<title>rWILKINS</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!--add below for media queries-->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
@@ -20,16 +22,14 @@
 			and hero image with slogan across -->
 		<header>
 
-			<div id="logo">
-				<h1>r<strong>WILKINS</strong></h1>
+			<div>
+				<h1 id="logo">r<strong>WILKINS</strong></h1>
+				<p id="slogan">pursuit of the ultimate cycling machine</p>	
 			</div>
 
 			<!-- show the hero image with slogan across-->
-			<div id="hero_main" class="image_text_container">
+			<div id="hero_main">
 				<img src="images\hero-image.jpg" alt="View of bicycle on gravel road">
-				<div class="text_block">
-					<p id="slogan">pursuit of the ultimate cycling machine</p>	
-				</div>
 			</div>
 			
 			<nav id="nav_top" class="clearfix">
