--- a/unit8/add-this.html
+++ b/unit8/add-this.html
@@ -7,6 +7,8 @@
 	<title>rWILKINS</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!--add below for media queries-->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
@@ -20,16 +22,14 @@
 			and hero image with slogan across -->
 		<header>
 
-			<div id="logo">
-				<h1>r<strong>WILKINS</strong></h1>
+			<div>
+				<h1 id="logo">r<strong>WILKINS</strong></h1>
+				<p id="slogan">pursuit of the ultimate cycling machine</p>	
 			</div>
 
 			<!-- show the hero image with slogan across-->
-			<div id="hero_main" class="image_text_container">
+			<div id="hero_main">
 				<img src="images\hero-image.jpg" alt="View of bicycle on gravel road">
-				<div class="text_block">
-					<p id="slogan">pursuit of the ultimate cycling machine</p>	
-				</div>
 			</div>
 			
 			<nav id="nav_top" class="clearfix">
@@ -45,14 +45,22 @@
 
 		<!-- main: contains intro article and other articles which will appear as pages later-->
 		<main>
-			<article id="how_it_came_about">
-				<h2>How this came about</h2>
-		
-				<p>I wanted <span>one bike</span> that does it all; gravel, road, fast, comfortable. That takes the <span>best</span> of bicycle engineering and technology, with a view to where things are heading. That won't be obsolete. That will <span>ride in rain or sunshine</span> and put a big smile across my face. This is the <span>journey</span>.</p>
-
-			</article>
-
 			
+			<article id="add_this_year_end_riding" class="clearfix">
+				<h2>Add this for all year riding</h2>
+				<div class="left_text">
+					<p>What to take on the bike, in the back jersey pockets, when you ride all year, night or day, rain or shine:</p>
+					<ul>
+						<li>Let there be <span>light</span>. How else to ride in the dark. AceBeam EC50 Gen III with custom mount by Ryan. Leynze Laser for the rear to get noticed.</li>
+						<li>Gen Innovations tubeless repair kit with anchovies, with Co2, tyre sealant in 60ml bottle, 50ml syringe custome build by Ryan. No tyre levers, no pump, no tube.</li>
+						<li>Kit. Sportful Fiandre for the <span>wet and cold</span>.</li>
+					</ul>
+				</div>
+				<div class="right_image">
+					<img src="images\front-light.PNG" alt="Acebeam EC50 Gen 3 light">
+					<p class="photo-copyright">Photo Source/Copyright: Acebeam</p>
+				</div>
+			</article>
 		</main>
 
 		
