--- a/unit8/index.html
+++ b/unit8/index.html
@@ -22,7 +22,7 @@
 			and hero image with slogan across -->
 		<header>
 
-			<div>
+			<div id="logo-and-slogan">
 				<h1 id="logo">r<strong>WILKINS</strong></h1>
 				<p id="slogan">pursuit of the ultimate cycling machine</p>	
 			</div>
