--- a/unit8/add-this.html
+++ b/unit8/add-this.html
@@ -57,7 +57,7 @@
 					</ul>
 				</div>
 				<div class="right_image">
-					<img src="images\front-light.PNG" alt="Acebeam EC50 Gen 3 light">
+					<img src="images\front-light.png" alt="Acebeam EC50 Gen 3 light">
 					<p class="photo-copyright">Photo Source/Copyright: Acebeam</p>
 				</div>
 			</article>
