--- a/unit8/fit-up.html
+++ b/unit8/fit-up.html
@@ -61,6 +61,10 @@
 				<div class="right_image">
 					<img src="images\bike-pos.png" alt="Bike geometry">
 					<p class="photo-copyright">Photo Copyright: Baum</p>
+					<img src="images\bike-fit-bars.png" alt="Bike geometry">
+					<img src="images\bike-fit-drops.png" alt="Bike geometry">
+					<img src="images\bike-fit-hoods.png" alt="Bike geometry">
+					
 				</div>
 			</article>
 
