--- a/unit9/index.html
+++ b/unit9/index.html
@@ -29,6 +29,7 @@
 
 			<nav id="nav_top" >
 				<!-- these are links to the pages that will be developed-->
+				<a href="index.html">Home</a><!--index-->
 				<a href="start-req.html">Start here</a><!--with requirements-->
 				<a href="fit-up.html">Fit up</a><!--for a Frame-->
 				<a href="its-here.html">The bike</a>
