unit9 new updates

--- a/unit9/index.html
+++ b/unit9/index.html
@@ -4,7 +4,6 @@
 
 <head>
 
-	
 	<title>rWILKINS</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -39,21 +38,21 @@
 
 		<!-- main: contains intro article and other articles which will appear as pages later-->
 		<main>
-			<article id="how_it_came_about">
-
-				<div id="hero_main">
+			<div id="hero-image">
 				<img src="images\hero-image.jpg" alt="View of bicycle on gravel road">
-				</div>
+				<p class="photo-copyright">Photo Source/Copyright: Yarra Valley</p>
+			</div>
+			<article id="how_it_came_about" class="clearfix">
+				
 				<h2>How this came about</h2>
-		
-				<p>I wanted <span>one bike</span> that does it all; gravel, road, fast, comfortable. That takes the <span>best</span> of bicycle engineering and technology, with a view to where things are heading. That won't be obsolete. That will <span>ride in rain or sunshine</span> and put a big smile across my face. This is the <span>journey</span>.</p>
-
+				<div>
+					<p>I wanted <span>one bike</span> that does it all; gravel, road, fast, comfortable. That takes the <span>best</span> of bicycle engineering and technology, with a view to where things are heading. That won't be obsolete. That will <span>ride in rain or sunshine</span> and put a big smile across my face. This is the <span>journey</span>.</p>
+				</div>
+				
 			</article>
-
-			
 		</main>
 
-		
+			
 
 		<footer>
 			<section id="section_final">
