--- a/unit9/start-req.html
+++ b/unit9/start-req.html
@@ -43,14 +43,16 @@
 			<article id="start_with_requirements" class="clearfix">
 				<h2>Start with requirements</h2>
 				<div class="left_text">
-					<p>Consider things like:</p>
+					<p><strong>Consider:</strong></p>
 					<ul>
-						<li>Bottom braket, threaded so there's <span>no creaking</span>, T47 for routing hydro line in BB</li>
-						<li>For a custom frame fit, what material will be used? Carbon, ti, steel? Don't forget budget! What about budded tubing if ti or steel?</li>
-						<li>Discs or rim brakes? What type of riding are you doing?</li>
-						<li>Tyre clearance. The trend is to <span>larger tyres</span> 28mm, 30mm. Remember the tyre will be measured wider on the mounted rim.</li>
-						<li>Electronic or mechanical? Why? Because the frame needs to allow routing and if you want mechanical you need mount points on the frame. Consider riding - if you like wet weather riding, the electric means no cables to get dirty which then impact shifting performance. Shimano or SRAM?</li>
-						<li>Other?</li>
+						<li>Bottom braket - <span>threaded</span> is preferable so there's <span>no creaking</span> (maybe a T47 for routing hydro line within the Bottom Bracket and allowing all the various crank options such as 30mm spindles)</li>
+						<li>Frame material - carbon, <span>ti</span>, steel? (Is there a budget?) What about budded tubing if using ti or steel? Butted tubing saves 200-400 grams depending on how much of the material is removed. It allows for what's called a more <span>compliant</span> ride - what's that you ask? It's more comfortable, more lively, slightly less harsh as it's just that fraction more flexible when it needs to be. It's tuned to the right note for the ultimate ride.</li>
+						<li>Discs or rim brakes? For gravel, wet riding and racing downhill in the mountains, I prefer <span>discs</span>. Besides, when spending a nice sum on wheels it will be preferable to not be wearing the rim out.</li>
+						<li>Tyre clearance, tyres, and rims. The trend is to <span>larger tyres</span> 28mm, 30mm. Remember the tyre will be measured wider when mounted on the rim. 31-32mm width for 28mm Pro Ones on Enve 4.5AR SES rims. Bigger tyres allow lower tyre pressure and allow for tubeless. There aren't many <span>tubeless</span> tyre options and wide rim disc options but it's only a matter of time I think.</li>
+						<li><span>Electronic or mechanical shifting</span>? Why? Because the frame needs to allow routing and if you want mechanical you need mount points on the frame. If riding all year round and in the wet the electric option means no cables to get dirty which then impact shifting performance. Shimano or SRAM? All I know is I prefer a single battery that I don't need to charge very often at all.</li>
+						<li>Handling: consider the bottom bracket drop, espcially given the tyres that will be used and crank length.
+						<span>Trail</span>: I found this to be the single parameter that consumed the most time in terms of understanding what a good figure is. From all the reading and advice I could find, the ideal figure is below 60mm, and somewhere between 56 and 59mm, with a preferance for between 58 and 59mm. For more information see diagram below (courtesy of Baum)</li>
+						<li>So, if a custom bike is the go - now for the <span>fit up</span></li>
 					</ul>
 				</div>
 				<div class="right_image">
