--- a/unit9/add-this.html
+++ b/unit9/add-this.html
@@ -44,14 +44,15 @@
 				<div class="left_text">
 					<p>What to take on the bike, in the back jersey pockets, when you ride all year, night or day, rain or shine:</p>
 					<ul>
-						<li>Let there be <span>light</span>. How else to ride in the dark. AceBeam EC50 Gen III with custom mount by Ryan. Leynze Laser for the rear to get noticed.</li>
-						<li>Gen Innovations tubeless repair kit with anchovies, with Co2, tyre sealant in 60ml bottle, 50ml syringe custome build by Ryan. No tyre levers, no pump, no tube.</li>
-						<li>Kit. Sportful Fiandre for the <span>wet and cold</span>.</li>
+						<li>Let there be <span>light</span>. How else to ride in the dark. AceBeam EC50 Gen III (replaceable 5000mAhr battery, built in USB charger) with custom mount using Funn RSX direct mount stem by Ryan. Leynze Laser for the rear to get noticed.</li>
+						<li>Tubeless repair kit with anchovies, with Co2, tyre sealant in 60ml bottle, 50ml syringe custom built by Ryan. No tyre levers, no pump, no tube.</li>
+						<li>Kit. Sportful Fiandre for the <span>wet and cold</span> and a good baselayer.</li>
 					</ul>
 				</div>
 				<div class="right_image">
 					<img src="images\front-light.png" alt="Acebeam EC50 Gen 3 light">
 					<p class="photo-copyright">Photo Source/Copyright: Acebeam</p>
+
 				</div>
 			</article>
 		</main>
