--- a/unit9/index.html
+++ b/unit9/index.html
@@ -40,7 +40,7 @@
 		<main>
 			<div id="hero-image">
 				<img src="images\hero-image.jpg" alt="View of bicycle on gravel road">
-				<p class="photo-copyright">Photo Source/Copyright: Yarra Valley</p>
+				<p class="photo-copyright">Photo Source/Copyright: Andy White</p>
 			</div>
 			<article id="how_it_came_about" class="clearfix">
 				
